# sid-matlab

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  miss_hit.cfg  mkdocs.yml  requirements-docs.txt  sidBodePlot.m  sidCompare.m  sidDetrend.m  sidFreqBT.m  sidFreqBTFDR.m  sidFreqBTMap.m  sidFreqETFE.m  sidFreqMap.m  sidInstall.m  sidLTIfreqIO.m  sidLTVStateEst.m  sidLTVdisc.m  sidLTVdiscFrozen.m  sidLTVdiscIO.m  sidLTVdiscTune.m  sidMapPlot.m  sidModelOrder.m  sidResidual.m  sidSpectrogram.m  sidSpectrogramPlot.m  sidSpectrumPlot.m
docs/: TODO.md  (+9 more)
python/: CONTRIBUTING.md  README.md  RELEASE_NOTES.md  pyproject.toml
python/examples/: README.md  example_coherence.ipynb  example_etfe.ipynb  example_freq_dep_res.ipynb  example_freq_map.ipynb  example_ltv_disc.ipynb  example_method_comparison.ipynb  example_mimo.ipynb  example_multi_trajectory.ipynb  example_output_cosmic.ipynb  example_siso.ipynb  example_spectrogram.ipynb  util_msd.py
python/sid/: __init__.py  _exceptions.py  _results.py  compare.py  detrend.py  freq_bt.py  freq_btfdr.py  freq_etfe.py  freq_map.py  lti_freq_io.py  ltv_disc.py  ltv_disc_frozen.py  ltv_disc_tune.py  residual.py  spectrogram.py
python/tests/: conftest.py  test_compare.py  test_cov.py  test_cross_validation.py  test_detrend.py  test_dft.py  test_freq_bt.py  test_freq_btfdr.py  test_freq_etfe.py  test_freq_map.py  test_hann_win.py  test_ltv_disc_frozen.py  test_ltv_disc_tune.py  test_plotting.py  test_residual.py  test_spectrogram.py  test_uncertainty.py  test_util_msd.py  test_validate.py  test_windowed_dft.py
(+256 files in other folders)
